# IdeologyGenerator

./: CNAME  README.mb  README.md  _config.yml  index.md  index_dev.md  lambda_function.py  pyproject.toml
.github/workflows/: main.yml
_layouts/: default.html
assets/css/: style.scss
