[tool.poetry]
name = "ideologygenerator"
version = "0.1.0"
description = ""
authors = ["Daniel Bak <danielbak@squareup.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
chardet = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

